--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: left;
+    border: solid black 1px;
 }
 
 .navbar__item {
@@ -12,3 +13,4 @@
 .navbar__logout {
     margin-left: auto;
 }
+
