finished equipment and info character inputs, user can save/view/delete their characters

--- a/src/components/publicLibrary/PublicLibrary.css
+++ b/src/components/publicLibrary/PublicLibrary.css
@@ -3,3 +3,19 @@
     flex-direction: column;
     align-items: center;
 }
+
+.Character-Card-Container {
+    display: flex; 
+}
+
+.publicCharacterCard {
+    border: solid 1px black;
+    padding: 1rem;
+    margin: 1rem;
+    width: 15rem;
+}
+
+.character-card-header {
+    display: flex;
+    justify-content: space-between
+}
