--- a/src/components/newCharacterForm/newCharacterForm.css
+++ b/src/components/newCharacterForm/newCharacterForm.css
@@ -11,3 +11,9 @@
     margin: 1rem;
     padding: 1rem;
 }
+
+.single-attribute-container {
+    border: solid 1px black;
+    margin: 1rem;
+    padding: 0.5rem;
+}
