All MVP character info populates in character sheet. Currently working on making radio buttons in character form work together

--- a/src/components/publicLibrary/PublicLibrary.css
+++ b/src/components/publicLibrary/PublicLibrary.css
@@ -6,6 +6,7 @@
 
 .Character-Card-Container {
     display: flex; 
+    flex-wrap: wrap;
 }
 
 .publicCharacterCard {
@@ -15,7 +16,3 @@
     width: 15rem;
 }
 
-.character-card-header {
-    display: flex;
-    justify-content: space-between
-}
