--- a/src/components/publicLibrary/PublicLibrary.css
+++ b/src/components/publicLibrary/PublicLibrary.css
@@ -7,6 +7,11 @@
 .Character-Card-Container {
     display: flex; 
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+.library-section-title {
+    font-family: CinzelRegular;
 }
 
 
