--- a/src/components/characterSheet/CharacterSheet.css
+++ b/src/components/characterSheet/CharacterSheet.css
@@ -1,14 +1,130 @@
 .character-sheet-container {
     display: flex;
     justify-content: center;
+    
 }
 
 .character-sheet {
-    width: 60%;
+    width: 70rem;
     border: solid black 1px;
     padding: 1rem;
+    background: white;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 }
 
 .character-image {
-    width: 50%;
+    width: 25rem;
+    height: 25rem;
+    object-fit: cover;
+    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+}
+
+.character-image-border {
+    background: gray;
+    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+    width: 25.3rem;
+    height: 25.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.character-sheet-head{
+    display: flex;
+    justify-content: space-between;
+}
+
+.basic-character-information {
+    margin-top: 5.5rem;
+    margin-left: -10rem;
+}
+
+.character-status{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.character-stat {
+    display: flex;
+}
+
+.character-AC-container {
+    display: flex;
+}
+
+.character-current-HP-border {
+    background: red;
+    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+    width: 5.5rem;
+    height: 5.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.character-current-will-border {
+    background: blue;
+    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+    width: 5.5rem;
+    height: 5.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.character-current-stamina-border {
+    background: green;
+    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+    width: 5.5rem;
+    height: 5.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.character-AC-border {
+    background: gray;
+    /* clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%); */
+    border: 10px solid var(--shield-border-color);
+    border-radius: 50% 50% 50% 50% / 12% 12% 88% 88%;
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.character-current-stat {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    width: 5rem;
+    height: 5rem;
+    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+}
+
+.character-max-stat{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: gray;
+    width: 2rem;
+    height: 2rem;
+    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+    margin-left: -1.5rem;
+}
+
+.character-AC-shield {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    width: 4rem;
+    height: 4rem;
+    
+    border-radius: 50% 50% 50% 50% / 12% 12% 88% 88%;
 }
