--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -1,16 +1,44 @@
 .navbar {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: left;
-    border: solid black 1px;
+    justify-content: space-between;
+    align-items: top;
+    
+    font-family: CinzelRegular;
+    border-bottom: solid black 2px;
+    padding-bottom:0.5rem;
+    
 }
 
 .navbar__item {
-    flex-basis: 20%;
     list-style-type: none;
 }
 
-.navbar__logout {
-    margin-left: auto;
+.navbar__userinfo__div{
+    display: flex;
+    width: 24rem;
+    justify-content: space-between;
+    margin-top:-1.4rem;
 }
 
+.header-title {
+    margin-top: -0.4rem;
+    margin-left: -2.5rem;
+    font-family: CinzelRegular;
+    font-size: 35px;
+    
+}
+
+.navbar__link{
+    color: black;
+    text-decoration: none;
+    -webkit-transition: color .3s linear;
+    -moz-transition: color .3s linear;
+    -ms-transition: color .3s linear;
+    -o-transition: color .3s linear;
+    transition: color .3s linear;
+}
+
+.navbar__link:hover {
+    color: #E84855
+}
