--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont,'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+  background: #fdfffc;
+  color: #031926;
+  /* background: linear-gradient(-230deg, #fdfffc, #e0e0e0, #d6fafd);
+  background-size: 600% 600%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+  background-position: 0% 50%
+  }
+50% {
+background-position: 100% 50%
+}
+100% {
+background-position: 0% 50%
+}
+}
+
+@-moz-keyframes Gradient {
+  0% {
+  background-position: 0% 50%
+  }
+50% {
+background-position: 100% 50%
+}
+100% {
+background-position: 0% 50%
+}
+}
+
+@keyframes Gradient {
+  0% {
+  background-position: 0% 50%
+  }
+50% {
+background-position: 100% 50%
+}
+100% {
+background-position: 0% 50%
+}
+}
+
+@font-face {
+  font-family: "earthorbiter";
+  src: local("earthorbiter"),
+    url("./fonts/earthorbiter.ttf") format("truetype");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "CinzelRegular";
+  src: local("CinzelRegular"),
+    url("./fonts/CINZELDECORATIVE-REGULAR.TTF") format("truetype");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "AngarsRunes";
+  src: local("AngarsRunes"),
+    url("./fonts/ANGARSRUNES_PERSONAL.TTF") format("truetype");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Bellefair";
+  src: local("Bellefair"),
+    url("./fonts/BELLEFAIR-REGULAR.TTF") format("truetype");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Bona Nova";
+  src: local("Bona Nova"),
+    url("./fonts/BONANOVA-REGULAR.TTF") format("truetype");
+  font-weight: normal;
+}
+
+
+
+.site-container {
+  padding: 1rem 2rem;
 }
