--- a/src/components/publicLibrary/PublicLibraryContainer.css
+++ b/src/components/publicLibrary/PublicLibraryContainer.css
@@ -4,7 +4,7 @@
 
 .library-filters-div {
     flex-basis: 17rem;
-    border-right: solid black 2px;
+    border-right: solid #031926 2px;
 }
 
 .library-div {
