--- a/src/components/publicLibrary/PublicCharacterCard.css
+++ b/src/components/publicLibrary/PublicCharacterCard.css
@@ -1,12 +1,14 @@
 .publicCharacterCard {
     padding: 0em;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    border: solid black 0.5px;
+    box-shadow: 0 3px 3px rgba(0,0,0,0.15);
+    border: solid #031926 2px;
     margin: 1rem;
     width: 15rem;
-    transition: all 0.3s ease-in-out;
-    background: white;
+    /* transition: all 0.3s ease-in-out; */
+    transition: border-color 0.3s ease-in-out;
+    background: #fdfffc;
     font-family: Bona Nova;
+    
 }
 
 .publicCharacterCard::after {
@@ -32,7 +34,8 @@
   }
 
   .publicCharacterCard:hover {
-    transform: scale(1.05, 1.05);
+    /* transform: scale(1.05, 1.05); */
+    border-color: #E84855
   }
 
   .publicCharacterCard:hover::after {
@@ -57,25 +60,11 @@
     margin-top: 0rem;    
 }
 
-.character-card-information {
-    /* margin-top: 0rem; */
-}
-
 .character-card-class {
      margin-top: -1rem;
 }
 
 .character-card-link {
-    color: black;
+    color: #031926;
 }
 
-.box {
-    position: relative;
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    transition: all 0.3s ease-in-out;
-  }
