--- a/src/components/views/Views.css
+++ b/src/components/views/Views.css
@@ -1,5 +1,5 @@
 .header-text {
-    border: solid black 1px;
+    border: solid #031926 1px;
     display: flex;
     flex-direction: column;
     align-items: center;
