--- a/src/components/characterSheet/CharacterSheet.css
+++ b/src/components/characterSheet/CharacterSheet.css
@@ -1,130 +1,178 @@
 .character-sheet-container {
     display: flex;
     justify-content: center;
+    padding: 3rem;
     
 }
 
 .character-sheet {
     width: 70rem;
-    border: solid black 1px;
-    padding: 1rem;
-    background: white;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    border: solid #031926 2px;
+    padding: 2rem;
+    background: #fdfffc;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    font-family: Bona Nova
 }
 
 .character-image {
-    width: 25rem;
-    height: 25rem;
+    width: 20rem;
+    height: 20rem;
     object-fit: cover;
-    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
+    border: solid #031926 2px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
 }
 
-.character-image-border {
-    background: gray;
-    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
-    width: 25.3rem;
-    height: 25.3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .character-sheet-head{
     display: flex;
+
     justify-content: space-between;
+    border-bottom: solid gray 2px;
+    padding-bottom: 2rem;
 }
 
 .basic-character-information {
-    margin-top: 5.5rem;
-    margin-left: -10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .character-status{
     display: flex;
+}
+
+.stat-column-LWS {
+    display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-right: 2em;
 }
 
-.character-stat {
+.stat-column-physical-abilities {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.character-AC-container {
+.LWS-column-section {
     display: flex;
+    align-items: flex-end;
 }
 
-.character-current-HP-border {
-    background: red;
-    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
-    width: 5.5rem;
-    height: 5.5rem;
+.LWS-column-section-current {
+    border: solid black 2px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.character-current-will-border {
-    background: blue;
-    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
-    width: 5.5rem;
-    height: 5.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.character-current-stamina-border {
-    background: green;
-    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
-    width: 5.5rem;
-    height: 5.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.character-AC-border {
-    background: gray;
-    /* clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%); */
-    border: 10px solid var(--shield-border-color);
-    border-radius: 50% 50% 50% 50% / 12% 12% 88% 88%;
-    width: 5rem;
     height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 5rem;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
 }
 
-.character-current-stat {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.LWS-current-stat-value {
+    margin: 0;
+}
+
+.LWS-current-stat-label {
+    margin: 0;
+}
+
+.LWS-column-section-max {
+    border: solid black 2px;
     background: white;
-    width: 5rem;
-    height: 5rem;
-    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
-}
-
-.character-max-stat{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: gray;
-    width: 2rem;
     height: 2rem;
-    clip-path: polygon(50% 5%, 90% 25%, 90% 75%, 50% 95%, 10% 75%, 10% 25%);
-    margin-left: -1.5rem;
-}
-
-.character-AC-shield {
+    width: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: white;
-    width: 4rem;
-    height: 4rem;
+    margin-bottom: -1rem;
+    margin-left: -1rem;
+    box-shadow: 6px 6px 11px rgba(0,0,0,0.2);
+}
+
+.LWS-max-stat-value {
+    margin: 0
+}
+
+.LWS-max-stat-label {
+    margin: 0
+}
+
+.character-attributes-section {
+    border-bottom: solid gray 2px;
+    padding-bottom: 3rem;
+}
+
+.att-box-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.equipment-section {
+    display: flex;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: solid gray 2px;
+}
+
+.weapon-section {
+    width: 50%;
+    border-right: solid gray 2px;
+}
+
+.armor-section {
+    padding-left: 1rem;
+}
+
+.species-information {
+    display: flex;
+    justify-content: space-between;
+}
+
+.class-information {
+    display: flex;
+    justify-content: space-between;
+}
+
+.level-information {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.devotion-section {
     
-    border-radius: 50% 50% 50% 50% / 12% 12% 88% 88%;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    border-bottom: solid gray 2px;
+}
+
+.devotion-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.devotion-div {
+    padding-top: 1rem;
+    width: 9rem;
+    
+    border: solid black 2px;
+    display: flex;
+    
+    flex-direction: column;
+    align-items: center;
+}
+
+.devotion-icon {
+    width: 5rem;
+    height: 5rem;
+    color: black;
+}
+
+.proficiencies-section {
+    padding-left: 1rem;
 }
