--- a/src/components/characterSheet/AttributeList.css
+++ b/src/components/characterSheet/AttributeList.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     box-shadow: 5px 5px 10px rgba(0, 0, 255, 0.25);
 }
 
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
 }
 
@@ -49,4 +50,12 @@
     display: flex;
     align-items: flex-end;
     
+}
+
+.att-value {
+    margin: 0;
+}
+
+.att-name {
+    margin: 0;
 }
