--- a/src/components/characterSheet/CharacterSheet.css
+++ b/src/components/characterSheet/CharacterSheet.css
@@ -25,16 +25,19 @@
 
 .character-sheet-head{
     display: flex;
-
+    
     justify-content: space-between;
     border-bottom: solid gray 2px;
     padding-bottom: 2rem;
+    
 }
 
 .basic-character-information {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-top: 0rem;
+    flex-basis: 40%;
 }
 
 .character-status{
@@ -47,6 +50,61 @@
     justify-content: space-between;
     margin-right: 2em;
 }
+
+.LWS-column-section-current-hp {
+    border: solid red 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 5rem;
+    width: 5rem;
+    box-shadow: 5px 5px 10px rgba(255,0,0,0.15);
+}
+
+.char-name-and-bio-item {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+
+.char-history-info-item {
+    margin-top: 0.5rem;
+    margin-bottom: 0rem;
+}
+
+.LWS-column-section-current-will {
+    border: solid blue 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 5rem;
+    width: 5rem;
+    box-shadow: 5px 5px 10px rgba(0,0,255,0.15);
+}
+
+.LWS-column-section-current-stamina {
+    border: solid green 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 5rem;
+    width: 5rem;
+    box-shadow: 5px 5px 10px rgba(0,255,0,0.15);
+}
+
+.physical-features-column-item {
+    border: solid #031926 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 5rem;
+    width: 5rem;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
+}
+
 
 .stat-column-physical-abilities {
     display: flex;
