adding images, form styling

--- a/src/components/newCharacterForm/newCharacterForm.css
+++ b/src/components/newCharacterForm/newCharacterForm.css
@@ -18,3 +18,77 @@
     margin: 1rem;
     padding: 0.5rem;
 }
+
+.formContainer {
+    display: flex;
+    justify-content: center;
+    padding-top: 3rem;
+    font-family: Bona Nova;
+}
+
+.formBackground {
+    width: 80%;
+    padding: 2rem;
+}
+
+.form-section-title {
+    margin-top: 0;
+}
+
+.labl {
+    display : block;
+    width: 50%;
+}
+
+.labl > input{ /* HIDE RADIO */
+    visibility: hidden; /* Makes input not-clickable */
+    position: absolute; /* Remove input from document flow */
+}
+.labl > input + div{ /* DIV STYLES */
+    cursor:pointer;
+    border:2px solid black;
+    background: #fdfffc;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
+    
+}
+
+.labl > input:checked + div{ /* (RADIO CHECKED) DIV STYLES */
+    background: #fdfffc;
+    border: 2px solid #00fffb;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
+}
+
+.character-feature-selection-div-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.selection-div {
+    display: flex;
+    margin-left: 0rem;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+    height: 18rem;
+    transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.selection-div:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+
+}
+
+.selection-text-div {
+    margin-left: 1rem;
+}
+
+.selection-image {
+    height: 100%;
+    width: 15rem;
+    object-fit: cover;
+    box-shadow: 5px 0 5px -2px rgba(0, 0, 0, 0.15);
+}
+
+.selection-text {
+    margin-left: 1rem;
+}
