lots of styling on first four form sections, in the middle of doing styling for attribute selection.

--- a/src/components/newCharacterForm/subclass/Subclass.css
+++ b/src/components/newCharacterForm/subclass/Subclass.css
@@ -1,8 +1,7 @@
-.subclass-att-bonus-list-container {
+.subclass-stats-div {
     display: flex;
 }
 
-.subclass-selection-container {
-    display: flex;
-    align-items: center;
+.stat-column-spacer {
+    padding: 0 1rem 0 1rem;
 }
