--- a/src/components/newCharacterForm/background/Background.css
+++ b/src/components/newCharacterForm/background/Background.css
@@ -1,8 +1,17 @@
-.background-att-bonus-list-container {
+.att-bonus-container {
     display: flex;
+    margin-top: 0rem;
+    padding: 0rem;
 }
 
-.background-selection-container {
+.att-bonus-section {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.att-bonus-text {
+    margin-top: 0;
+    margin-right: 1rem;
 }
