--- a/src/components/newCharacterForm/newCharacterForm.css
+++ b/src/components/newCharacterForm/newCharacterForm.css
@@ -1,34 +1,17 @@
 
-.attributes-container {
-    display: flex;
-}
 
-.equipment-container {
-    display: flex;
-}
-
-.attribute-value {
-    border: solid 1px black; 
-    margin: 1rem;
-    padding: 1rem;
-}
-
-.single-attribute-container {
-    border: solid 1px black;
-    margin: 1rem;
-    padding: 0.5rem;
-}
 
 .formContainer {
     display: flex;
     justify-content: center;
-    padding-top: 3rem;
+    padding-top: 0rem;
     font-family: Bona Nova;
 }
 
 .formBackground {
     width: 80%;
-    padding: 2rem;
+    padding: 0 2rem 2rem 2rem;
+    
 }
 
 .form-section-title {
@@ -54,13 +37,18 @@
 
 .labl > input:checked + div{ /* (RADIO CHECKED) DIV STYLES */
     background: #fdfffc;
-    border: 2px solid #00fffb;
+    border: 2px solid #E84855;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
+}
+
+.labl > input:checked:hover + div {
+    box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
 }
 
 .character-feature-selection-div-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .selection-div {
@@ -78,10 +66,6 @@
 
 }
 
-.selection-text-div {
-    margin-left: 1rem;
-}
-
 .selection-image {
     height: 100%;
     width: 15rem;
@@ -90,5 +74,20 @@
 }
 
 .selection-text {
-    margin-left: 1rem;
+    margin: 0 0 0.5rem 0;
+}
+
+.selection-title {
+    margin: 0 0 0.5rem 0;
+}
+
+.selection-description {
+    margin: 0 0 0.5rem 0;
+}
+
+.selection-information-div {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    justify-content: flex-start;
 }
