--- a/src/components/newCharacterForm/attributes/AttributeSelection.css
+++ b/src/components/newCharacterForm/attributes/AttributeSelection.css
@@ -19,8 +19,27 @@
     height: 100%;
 }
 
+.attribute-value-selected-bonus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:10%;
+    height: 100%;
+    color: blue;
+}
+
 .single-attribute-container {
     border: solid 2px black;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
+    padding: 0rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.single-attribute-container-selected {
+    border: solid 2px #E84855;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     padding: 0rem;
     display: flex;
