changed styling for equipment proficiency selection

--- a/src/components/newCharacterForm/attributes/AttributeSelection.css
+++ b/src/components/newCharacterForm/attributes/AttributeSelection.css
@@ -13,6 +13,7 @@
 
 .attribute-value {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width:10%;
@@ -21,6 +22,7 @@
 
 .attribute-value-selected-bonus {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width:10%;
