--- a/src/components/newCharacterForm/equipment/EquipmentSelection.css
+++ b/src/components/newCharacterForm/equipment/EquipmentSelection.css
@@ -1,17 +1,18 @@
 .equipment-container {
     display: flex;
-    padding-right: 2rem;
+    /* padding-right: 2rem; */
+    
 }
 
 .weapon-selection-column {
     width: 50%;
-    border-right: solid gray 2px;
-    padding-right: 1rem;
+    
 }
 
 .armor-selection-column {
     width: 50%;
     padding-left: 1rem;
+    border-left: gray solid 2px;
 }
 
 .prof-selection-container {
@@ -61,4 +62,61 @@
 
 .prof-name {
     margin: 0;
+}
+
+.equip-selection-container {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.equip-label {
+    display : block;
+    width: 90%;
+    margin-bottom: 1rem;
+}
+
+.equip-label > input{ /* HIDE RADIO */
+    visibility: hidden; /* Makes input not-clickable */
+    position: absolute; /* Remove input from document flow */
+}
+.equip-label > input + div{ /* DIV STYLES */
+    cursor:pointer;
+    border:2px solid black;
+    background: #fdfffc;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
+    display: flex;
+    justify-content: center;
+    transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.equip-label:hover > input + div {
+    transform: translateY(-1px);
+    box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.2); 
+}
+
+.equip-label > input:checked + div{ /* (RADIO CHECKED) DIV STYLES */
+    background: #fdfffc;
+    border: 2px solid #E84855;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
+}
+
+.equip-label > input:checked:hover + div{ /* (RADIO CHECKED) DIV STYLES */
+    transform: translateY(-1px);
+    box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.2);
+}
+
+.equipment-text {
+    margin: 0;
+    padding: 0;
+    
+}
+
+.equipment-information-div {
+    
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
 }
