added images to equipment cards

--- a/src/components/characterSheet/CharacterSheet.css
+++ b/src/components/characterSheet/CharacterSheet.css
@@ -168,16 +168,57 @@
     justify-content: space-between;
 }
 
-.equipment-section {
+.all-char-equipment-section {
     display: flex;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 2rem;
     border-bottom: solid gray 2px;
+    padding-bottom: 2rem;
 }
 
-.weapon-section {
+.char-equipment-section-title {
+    margin-top: 0;
+}
+
+.char-equipment-name {
+    margin-top: 0;
+}
+
+.char-equipment-image-container{
+    height: 100%;
+}
+
+.char-equipment-section {
     width: 50%;
     border-right: solid gray 2px;
+    padding-right: 1rem;
+    display: flex;
+    justify-content: space-between;
+    height: 11rem;
+}
+    
+
+.char-equipment-section-armor {
+    width: 50%;
+    padding-left: 1rem;
+    display: flex;
+    justify-content: space-between;
+    height: 11rem;
+}
+
+.char-equipment-details-flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    /* border: solid red 1px; */
+}
+
+.char-equipment-image {
+    height: 100%;
+    width: 11rem;
+    object-fit: cover;
+    /* border: solid #031926 2px; */
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
+
 }
 
 .armor-section {
