--- a/src/components/newCharacterForm/equipment/EquipmentSelection.css
+++ b/src/components/newCharacterForm/equipment/EquipmentSelection.css
@@ -66,14 +66,13 @@
 
 .equip-selection-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     
 }
 
 .equip-label {
     display : block;
-    width: 90%;
-    margin-bottom: 1rem;
+    width: 45%;
 }
 
 .equip-label > input{ /* HIDE RADIO */
@@ -86,7 +85,7 @@
     background: #fdfffc;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
@@ -106,14 +105,25 @@
     box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.2);
 }
 
+.equipment-div {
+    height: 9rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+}
+
 .equipment-text {
     margin: 0;
     padding: 0;
-    
+}
+
+.equipment-image {
+    height: 100%;
+    width: 9rem;
+    object-fit: cover;
+    box-shadow: 5px 0 5px -2px rgba(0, 0, 0, 0.15);
 }
 
 .equipment-information-div {
-    
     padding: 1rem;
     display: flex;
     flex-direction: column;
