--- a/src/components/newCharacterForm/newCharacterForm.css
+++ b/src/components/newCharacterForm/newCharacterForm.css
@@ -87,3 +87,9 @@
     padding: 1rem;
     justify-content: flex-start;
 }
+
+.step-button-container {
+    display: flex;
+    padding-right: 2rem;
+    justify-content: flex-end;
+}
