--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,6 +1,7 @@
 .profile-character-card-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .user--information {
