--- a/src/components/publicLibrary/PublicCharacterCard.css
+++ b/src/components/publicLibrary/PublicCharacterCard.css
@@ -3,30 +3,33 @@
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     border: solid #031926 2px;
     margin: 1rem;
-    width: 15rem;
+    width: 28rem;
+    height: 15rem;
     /* transition: all 0.3s ease-in-out; */
     transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
     background: #fdfffc;
     font-family: Bona Nova;
-    
+    display: flex;
 }
 
 .publicCharacterCard:hover {
     /* transform: scale(1.05, 1.05); */
     transform: translateY(-5px);
     box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+    
 }
 
 
 
 .character-card-text {
-    padding: 0.5rem;
+    padding: 1rem;
 }
 
 .character-card-image {
-    width: 100%;
-    height: 10rem;
+    height: 100%;
+    width: 12rem;
     object-fit: cover;
+    box-shadow: 5px 0 5px -2px rgba(0, 0, 0, 0.15);
 }
 
 .card-username {
