Changed fonts on main page

--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -84,11 +84,11 @@
   }
 
   .user--library--title {
-    font-family: CinzelRegular;
+    font-family: Bona Nova;
   }
 
   .user--information--title {
-    font-family: CinzelRegular;
+    font-family: Bona Nova;
   }
 
   .user--library {
