--- a/src/components/characterSheet/CharacterSheet.css
+++ b/src/components/characterSheet/CharacterSheet.css
@@ -10,7 +10,7 @@
     border: solid #031926 2px;
     padding: 2rem;
     background: #fdfffc;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-family: Bona Nova
 }
 
@@ -251,26 +251,10 @@
 
 .devotion-card-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.devotion-div {
-    padding-top: 1rem;
-    width: 9rem;
-    
-    border: solid black 2px;
-    display: flex;
-    
-    flex-direction: column;
-    align-items: center;
-}
 
-.devotion-icon {
-    width: 5rem;
-    height: 5rem;
-    color: black;
-}
 
 .proficiencies-section {
     padding-left: 1rem;
