--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -5,8 +5,10 @@
     align-items: top;
     
     font-family: CinzelRegular;
-    border-bottom: solid #031926 2px;
-    padding-bottom:0.5rem;
+    /* border-bottom: solid #031926 2px; */
+    
+    margin-bottom: 0;
+    padding: 0 2rem 0.5rem 2rem;
     
 }
 
@@ -23,7 +25,7 @@
 
 .header-title {
     margin-top: -0.4rem;
-    margin-left: -2.5rem;
+    
     font-family: CinzelRegular;
 }
 
