--- a/src/components/publicLibrary/LibraryFilters.css
+++ b/src/components/publicLibrary/LibraryFilters.css
@@ -1,3 +1,108 @@
 .filter-section-title {
     font-family: Bona Nova;
 }
+
+.filter-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.all-dropdown-div {
+    display: flex;
+    align-items: center;
+}
+
+.dropdown-filter-div {
+    margin-right: 1rem;
+}
+
+.search-input {
+    width: 15rem;
+    font-size: 1rem;
+    font-family: Bona Nova;
+    padding: 0.2rem;
+    background: none;
+    outline: none;
+    border: solid black 2px;
+}
+
+select {
+    text-align: center;
+    margin-right: 1rem;
+    font-family: Bona Nova;
+    border: none;
+    background: none;
+    font-size: 1rem;
+    outline: none;
+    width: 7rem;
+    transition: color 0.1s ease-in-out, border 0.2s ease-in-out;
+}
+
+option {
+    background: none;
+    border-bottom: solid gray 2px;
+    text-align: center;
+    padding-left: none;
+    color: black;
+}
+
+.filter-btn {
+    background: #fff;
+    backface-visibility: hidden;
+    border: solid #031926 2px;
+    box-sizing: border-box;
+    color: #031926;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Bona Nova;
+    font-size: 1rem;
+    line-height: 1.3;
+    padding: .15rem .15rem;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transform: translateZ(0) scale(1);
+    transition: transform .2s, box-shadow 0.3s ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.05);
+  }
+  
+  .filter-btn:not(:disabled):hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.1);
+  }
+  
+  .filter-btn:not(:disabled):hover:active {
+    transform: translateY(-2px);
+    box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.1);
+  }
+  
+  .filter-btn:focus {
+    outline: 0 solid transparent;
+  }
+  
+  .filter-btn:focus:before {
+    content: "";
+    left: calc(-1*.375rem);
+    pointer-events: none;
+    position: absolute;
+    top: calc(-1*.375rem);
+    transition: border-radius;
+    user-select: none;
+  }
+  
+  .filter-btn:focus:not(:focus-visible) {
+    outline: 0 solid transparent;
+  }
+  
+  .filter-btn:focus:not(:focus-visible):before {
+    border-width: 0;
+  }
+  
+  .filter-btn:not(:disabled):active {
+    transform: translateY(.125rem);
+  }
+
