--- a/src/components/publicLibrary/PublicCharacterCard.css
+++ b/src/components/publicLibrary/PublicCharacterCard.css
@@ -2,8 +2,9 @@
     padding: 0em;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     border: solid #031926 2px;
-    margin: 1rem;
-    width: 28rem;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+    width: 29rem;
     height: 15rem;
     /* transition: all 0.3s ease-in-out; */
     transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
