--- a/src/components/characterSheet/CharacterSheet.css
+++ b/src/components/characterSheet/CharacterSheet.css
@@ -27,7 +27,7 @@
     display: flex;
     
     justify-content: space-between;
-    border-bottom: solid gray 2px;
+    border-bottom: solid lightgray 2px;
     padding-bottom: 2rem;
     
 }
@@ -159,7 +159,7 @@
 }
 
 .character-attributes-section {
-    border-bottom: solid gray 2px;
+    border-bottom: solid lightgray 2px;
     padding-bottom: 3rem;
 }
 
@@ -171,7 +171,7 @@
 .all-char-equipment-section {
     display: flex;
     padding-top: 2rem;
-    border-bottom: solid gray 2px;
+    border-bottom: solid lightgray 2px;
     padding-bottom: 2rem;
 }
 
@@ -189,7 +189,7 @@
 
 .char-equipment-section {
     width: 50%;
-    border-right: solid gray 2px;
+    border-right: solid lightgray 2px;
     padding-right: 1rem;
     display: flex;
     justify-content: space-between;
@@ -216,7 +216,7 @@
     height: 100%;
     width: 11rem;
     object-fit: cover;
-    /* border: solid #031926 2px; */
+    border: solid #031926 2px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
 
 }
@@ -246,7 +246,7 @@
     
     padding-top: 1rem;
     padding-bottom: 2rem;
-    border-bottom: solid gray 2px;
+    border-bottom: solid lightgray 2px;
 }
 
 .devotion-card-container {
@@ -254,8 +254,73 @@
     justify-content: space-between;
 }
 
-
-
 .proficiencies-section {
     padding-left: 1rem;
 }
+
+.button-div {
+    display: flex;
+    justify-content: right;
+    margin-top: 1rem;
+}
+
+.delete-button {
+    background: #fff;
+    backface-visibility: hidden;
+    border: solid #031926 2px;
+    box-sizing: border-box;
+    color: #031926;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Bona Nova;
+    font-size: 1.5rem;
+    line-height: 1.3;
+    padding: .25rem .5rem;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transform: translateZ(0) scale(1);
+    transition: transform .2s, box-shadow 0.3s ease-in-out, background 0.2s ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
+  }
+  
+  .delete-button:not(:disabled):hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 8px 12px 1px rgba(0, 0, 0, 0.2);
+    background: #E84855;
+  }
+  
+  .delete-button:not(:disabled):hover:active {
+    transform: translateY(-2px);
+    box-shadow: 0px 8px 12px 1px rgba(0, 0, 0, 0.2);
+    background: #E84855;
+  }
+  
+  .delete-button:focus {
+    outline: 0 solid transparent;
+  }
+  
+  .delete-button:focus:before {
+    content: "";
+    left: calc(-1*.375rem);
+    pointer-events: none;
+    position: absolute;
+    top: calc(-1*.375rem);
+    transition: border-radius;
+    user-select: none;
+  }
+  
+  .delete-button:focus:not(:focus-visible) {
+    outline: 0 solid transparent;
+  }
+  
+  .delete-button:focus:not(:focus-visible):before {
+    border-width: 0;
+  }
+  
+  .delete-button:not(:disabled):active {
+    transform: translateY(.125rem);
+  }
