--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,86 +1,92 @@
 .profile-character-card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    
+}
+
+.profile--container {
+  display: flex;
+  justify-content: center;
+}
+
+.profile-background {
+  width: 80%;
 }
 
 .user--information {
     font-family: Bona Nova;
-    flex-basis: 15rem;
-    border-right: solid #031926 2px;
-    padding-right: 1em;
+    padding-bottom: 2rem;
+    border-bottom: solid 2px gray;
 }
 
-.profile--container {
-    display: flex;
+.edit-button {
+  background: #fff;
+  backface-visibility: hidden;
+  border: solid #031926 2px;
+  box-sizing: border-box;
+  color: #031926;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Bona Nova;
+  font-size: 1rem;
+  line-height: 1.3;
+  padding: .25rem .5rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s, box-shadow 0.3s ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
 }
 
-.user--info--edit--button {
-    background: #fff;
-    backface-visibility: hidden;
-    border-radius: .1rem;
-    border: solid #031926 1.5px;
-    box-sizing: border-box;
-    color: #031926;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Bona Nova;
-    font-size: 1.125rem;
-    line-height: 1.3;
-    padding: .25rem .5rem;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transform: translateZ(0) scale(1);
-    transition: transform .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-  }
-  
-  .user--info--edit--button:not(:disabled):hover {
-    transform: scale(1.05);
-  }
-  
-  .user--info--edit--button:not(:disabled):hover:active {
-    transform: scale(1.05) translateY(.125rem);
-  }
-  
-  .user--info--edit--button:focus {
-    outline: 0 solid transparent;
-  }
-  
-  .user--info--edit--button:focus:before {
-    content: "";
-    left: calc(-1*.375rem);
-    pointer-events: none;
-    position: absolute;
-    top: calc(-1*.375rem);
-    transition: border-radius;
-    user-select: none;
-  }
-  
-  .user--info--edit--button:focus:not(:focus-visible) {
-    outline: 0 solid transparent;
-  }
-  
-  .user--info--edit--button:focus:not(:focus-visible):before {
-    border-width: 0;
-  }
-  
-  .user--info--edit--button:not(:disabled):active {
-    transform: translateY(.125rem);
-  }
+.edit-button:not(:disabled):hover {
+  transform: translateY(-2px);
+  box-shadow: 0px 8px 12px 1px rgba(0, 0, 0, 0.2);
+}
+
+.edit-button:not(:disabled):hover:active {
+  transform: translateY(-2px);
+  box-shadow: 0px 8px 12px 1px rgba(0, 0, 0, 0.2);
+}
+
+.edit-button:focus {
+  outline: 0 solid transparent;
+}
+
+.edit-button:focus:before {
+  content: "";
+  left: calc(-1*.375rem);
+  pointer-events: none;
+  position: absolute;
+  top: calc(-1*.375rem);
+  transition: border-radius;
+  user-select: none;
+}
+
+.edit-button:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
+}
+
+.edit-button:focus:not(:focus-visible):before {
+  border-width: 0;
+}
+
+.edit-button:not(:disabled):active {
+  transform: translateY(.125rem);
+}
 
   .button--container {
     display: flex;
-    justify-content: right;
+    justify-content: left;
   }
 
   .user--info--field--container {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    margin: 0rem;
   }
 
   .user--library--title {
@@ -94,12 +100,15 @@
   .user--library {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
   }
 
   .user--library--container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+    padding-top: 1rem;
+    
+  }
+
+  .user-text {
+    margin: 0 1rem 0.5rem 0;
   }
