cleaned up class cards

--- a/src/components/newCharacterForm/newCharacterForm.css
+++ b/src/components/newCharacterForm/newCharacterForm.css
@@ -73,6 +73,10 @@
     margin: 0 0 0.5rem 0;
 }
 
+.selection-text-subclass-title {
+    margin: 1rem 0rem 0.5rem 0;
+}
+
 .selection-title {
     margin: 0 0 0.5rem 0;
 }
@@ -93,3 +97,13 @@
     padding-right: 2rem;
     justify-content: flex-end;
 }
+
+.subclass-list-div {
+    display: flex;
+}
+
+.class-subclass-text {
+    margin-top: 0;
+    margin-right: 1rem;
+}
+
