started subclass styling

--- a/src/components/publicLibrary/LibraryFilters.css
+++ b/src/components/publicLibrary/LibraryFilters.css
@@ -22,7 +22,7 @@
     font-size: 1rem;
     font-family: Bona Nova;
     padding: 0.2rem;
-    background: none;
+    background: white;
     outline: none;
     border: solid black 2px;
 }
