--- a/src/components/characterSheet/SpellList.css
+++ b/src/components/characterSheet/SpellList.css
@@ -1,5 +1,5 @@
 .spell-text-div {
-    border: solid black 2px;
+    border: solid #031926 2px;
     margin-bottom: 1rem;
     padding: 1rem;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
