--- a/src/components/newCharacterForm/CharacterSubmitButton.css
+++ b/src/components/newCharacterForm/CharacterSubmitButton.css
@@ -1,5 +1,5 @@
 .character-submit-button {
-    background: #fff;
+    background:  #fdfffc;
     backface-visibility: hidden;
     border-radius: .1rem;
     border: solid #031926 2px;
