--- a/src/components/newCharacterForm/StepButtons.css
+++ b/src/components/newCharacterForm/StepButtons.css
@@ -1,5 +1,5 @@
 .step-button {
-    background: #fff;
+    background: #fdfffc;
     backface-visibility: hidden;
     border: solid #031926 2px;
     box-sizing: border-box;
