--- a/src/components/profile/EditUserProfile.css
+++ b/src/components/profile/EditUserProfile.css
@@ -23,7 +23,7 @@
 }
 
 .submitButton {
-    background: #fff;
+    background: #fdfffc;
     backface-visibility: hidden;
     border-radius: .1rem;
     border: solid #031926 1.5px;
