--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -20,7 +20,7 @@
 }
 
 .edit-button {
-  background: #fff;
+  background: #fdfffc;
   backface-visibility: hidden;
   border: solid #031926 2px;
   box-sizing: border-box;
