--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -7,8 +7,8 @@
 .login-container {
     padding: 2rem;
     padding-bottom: 1.5rem;
-    margin-top: 4rem;
-    border: solid #031926 1.5px;
+    margin-top: 12rem;
+    border: solid #031926 2px;
     width: 24rem;
     display: flex;
     flex-direction: column;
@@ -41,6 +41,9 @@
     height: 2rem;
     font-size: 16px;
     font-family: Bona Nova;
+    border: solid #031926 1.5px;
+    outline: none;
+    border-radius: none;
 }
 
 .form-field {
@@ -51,34 +54,36 @@
 }
     
 .submitButton {
-  background: #fff;
+  background: #fdfffc;
   backface-visibility: hidden;
-  border-radius: .1rem;
-  border: solid #031926 1.5px;
+  border: solid #031926 2px;
   box-sizing: border-box;
   color: #031926;
   cursor: pointer;
   display: inline-block;
   font-family: Bona Nova;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.3;
-  padding: .25rem .5rem;
+  padding: .15rem .15rem;
   position: relative;
   text-align: left;
   text-decoration: none;
   transform: translateZ(0) scale(1);
-  transition: transform .2s;
+  transition: transform .2s, box-shadow 0.3s ease-in-out;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.05);
 }
 
 .submitButton:not(:disabled):hover {
-  transform: scale(1.05);
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.1);
 }
 
 .submitButton:not(:disabled):hover:active {
-  transform: scale(1.05) translateY(.125rem);
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.1);
 }
 
 .submitButton:focus {
