--- a/src/components/characterSheet/DevotionList.css
+++ b/src/components/characterSheet/DevotionList.css
@@ -3,20 +3,20 @@
 }
 
 .devotion-div {
-    width: 10rem;
-    border: solid black 2px;
+    width: 10.5rem;
+    border: solid #031926 2px;
     box-shadow: 6px 6px 11px rgba(0,0,0,0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background: white;
+    background: #fdfffc;
 }
 
 .devotion-icon {
     width: 3rem;
     height: 3rem;
-    color: black;
+    color: #031926;
 }
 
 .devotion-level-div {
@@ -39,3 +39,11 @@
     align-items: center;
     margin: 1rem 0;
 }
+
+.god-name {
+    margin-bottom: 0rem;
+    margin-top: 0.5rem;
+}
+
+
+
