--- a/src/components/newCharacterForm/attributes/AttributeSelection.css
+++ b/src/components/newCharacterForm/attributes/AttributeSelection.css
@@ -31,7 +31,7 @@
 }
 
 .single-attribute-container {
-    border: solid 2px black;
+    border: solid 2px #031926;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     padding: 0rem;
     display: flex;
@@ -41,7 +41,7 @@
 }
 
 .single-attribute-container-selected {
-    border: solid 2px black;
+    border: solid 2px #031926;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     padding: 0rem;
     display: flex;
@@ -69,7 +69,7 @@
 }
 .att-label > input + div{ /* DIV STYLES */
     cursor:pointer;
-    border:2px solid black;
+    border:2px solid #031926;
     background: #fdfffc;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     display: flex;
