--- a/src/components/newCharacterForm/equipment/EquipmentSelection.css
+++ b/src/components/newCharacterForm/equipment/EquipmentSelection.css
@@ -35,7 +35,7 @@
 }
 .prof-label > input + div{ /* DIV STYLES */
     cursor:pointer;
-    border:2px solid black;
+    border:2px solid #031926;
     background: #fdfffc;
     padding: 1rem;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
@@ -81,7 +81,7 @@
 }
 .equip-label > input + div{ /* DIV STYLES */
     cursor:pointer;
-    border:2px solid black;
+    border:2px solid #031926;
     background: #fdfffc;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     display: flex;
