--- a/src/components/newCharacterForm/information/CharacterInfoSelection.css
+++ b/src/components/newCharacterForm/information/CharacterInfoSelection.css
@@ -39,10 +39,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: black solid 2px;
+    border: #031926 solid 2px;
     margin-bottom: 1rem;
     box-shadow: 5px 0 5px -2px rgba(0, 0, 0, 0.15);
-    background: white;
+    background: #fdfffc;
 }
 
 .char-image {
