--- a/src/components/newCharacterForm/newCharacterForm.css
+++ b/src/components/newCharacterForm/newCharacterForm.css
@@ -26,7 +26,7 @@
 }
 .labl > input + div{ /* DIV STYLES */
     cursor:pointer;
-    border:2px solid black;
+    border:2px solid #031926;
     background: #fdfffc;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.15);
     
