--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
  
-  /* background: #fdfffc; */
+  background: #fdfffc;
   color: #031926;
-  background: linear-gradient(94deg, #fdfffc, #fdfffc, #fdfffc, #f0f0f0, #e5edee, #f0f0f0, #fdfffc, #fdfffc, #fdfffc, #fdfffc, #fdfffc, #e4fffe, #dafffe, #ecfffe);
-    background-size: 2800% 2800%;
+  /* background: linear-gradient(94deg, #fdfffc, #fdfffc, #fdfffc, #f0f0f0, #e5edee, #f0f0f0, #fdfffc, #fdfffc, #fdfffc, #fdfffc, #fdfffc, #e4fffe, #dafffe, #ecfffe);
+    background-size: 2800% 2800%; */
 
     -webkit-animation: AnimationName 35s ease infinite;
     -moz-animation: AnimationName 35s ease infinite;
